*SVN*

* deploy:cold should also run migrations before starting the app [Jamis Buck]

* Make the copy strategy check out to a temporary directory [Jamis Buck]


*1.99.0 (2.0 Preview 1)* April 24, 2007

* Add `capify' script to make it easier to prepare a project for deployment using cap [Jamis Buck]

* Make sure the sudo helper understands the SuSE dialect of the sudo password prompt [Steven Wisener]

* Fix synchronization issue with Gateway initialization [Doug Barth]

* Added opt-in "compat" and "upgrade" recipes for tasks to aid in the upgrade process to Capistrano 2 [Jamis Buck]

* The deployment recipes are now opt-in. Just do 'load "deploy"' in your recipe script. [Jamis Buck]

* Added $CAPISTRANO:HOST$ placeholder in commands, which will be replaced with the name of the host on which the command is executing [Jamis Buck]

* Added -e switch to explain specific task. Added -X to extend -x. Made -h much briefer. Added -T to list known tasks. [Jamis Buck]

* Added namespaces for tasks [Jamis Buck]

* Merged the Configuration and Actor classes, performed various other massive refactorings of the code [Jamis Buck]


*1.4.1* (February 24, 2007)

* Use the no-auth-cache option with subversion so that username/password tokens do not get cached by capistrano usage [jonathan]

* Deprecated upper-cased variables [Jamis Buck]

* Make sure Actor#get does not close the SFTP channel (so subsequent SFTP operations work) [Dov Murik]

* Add :env option to 'run' (and friends) so that you can specify environment variables to be injected into the new process' environment [Mathieu Lajugie]


*1.4.0* (February 3, 2007)

* Use the auth info for subversion more consistently [Jamis Buck]

* Add a "capture" helper, for capturing the stdout of a remote command and returning it as a string [Jamis Buck]

* Add a "get" helper, to pull a file from a remote server to the localhost [bmihelac]
